# ws202526-anlp

./: .gitignore  README.md  pyproject.toml
data/: tsar2025_test.jsonl
notebooks/: 02_rnns_lstms_seq2seq.py  04_transformer_based_models.py  05_intro_llms.py  06_prompt_engineering.py
